--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1166,8 +1166,8 @@ config STUNE_ASSIST
 	depends on SCHED_TUNE
 	depends on ANDROID
 	help
-	  This option enables the configuration of default SchedTune
-	  parameters from kernel.
+	  This option enables in-kernel overrides for SchedTune values.
+
 	  If unsure, say N.
 
 config DEFAULT_USE_ENERGY_AWARE
