--- a/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
@@ -68,7 +68,6 @@
 
 		/* <HZ/12> */
 		qcom,idle-timeout = <58>;
-		qcom,no-nap;
 
 		qcom,highest-bank-bit = <14>;
 
@@ -610,6 +609,7 @@
 		clock-names = "iface_clk", "mem_clk", "mem_iface_clk";
 
 		qcom,secure_align_mask = <0xfff>;
+		qcom,unmap_fast;
 		qcom,retention;
 		qcom,hyp_secure_alloc;
 
