--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -427,7 +427,7 @@
 	};
 
 	chosen {
-		bootargs = "quiet rcupdate.rcu_expedited=1 rcu_nocbs=0-7 noirqdebug";
+		bootargs = "quiet rcupdate.rcu_expedited=1 nosoftlockup mce=ignore_ce rcu_nocbs=0-7 noirqdebug";
 	};
 
 	soc: soc { };
