--- a/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
@@ -359,7 +359,7 @@
 
 				qcom,speed-bin = <146>;
 
-				qcom,initial-pwrlevel = <6>;
+				qcom,initial-pwrlevel = <7>;
 				qcom,ca-target-pwrlevel = <4>;
 
 				qcom,gpu-pwrlevel@0 {
@@ -424,9 +424,18 @@
 					qcom,bus-max = <4>;
 				};
 
-				/* XO */
+				/* RETENTION */
 				qcom,gpu-pwrlevel@7 {
 					reg = <7>;
+					qcom,gpu-freq = <91000000>;
+					qcom,bus-freq = <2>;
+					qcom,bus-min = <1>;
+					qcom,bus-max = <2>;
+				};
+
+				/* XO */
+				qcom,gpu-pwrlevel@8 {
+					reg = <8>;
 					qcom,gpu-freq = <0>;
 					qcom,bus-freq = <0>;
 					qcom,bus-min = <0>;
