devfreq_boost: Move default input stune boost level to Kconfig

--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -301,6 +301,14 @@ config DEVFREQ_MSM_LLCCBW_BOOST_FREQ
 	help
 	  LLCCBW boost frequency for the MSM DDR bus.
 
+
+config INPUT_STUNE_BOOST
+	depends on DYNAMIC_STUNE_BOOST
+	int "Input SchedTune boost level"
+	default "10"
+	help
+	  Default SchedTune boost level for the top-app cgroup.
+
 endif
 
 source "drivers/devfreq/event/Kconfig"
