Revert "dts: sdmmagpie-gpu: use iommu_unmap_fast and allow nap"
This reverts commit c8275c57be250a75acb44f3a112525db6d564e21.

--- a/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
@@ -68,6 +68,7 @@
 
 		/* <HZ/12> */
 		qcom,idle-timeout = <58>;
+		qcom,no-nap;
 
 		qcom,highest-bank-bit = <14>;
 
@@ -605,7 +606,6 @@
 		clock-names = "iface_clk", "mem_clk", "mem_iface_clk";
 
 		qcom,secure_align_mask = <0xfff>;
-		qcom,unmap_fast;
 		qcom,retention;
 		qcom,hyp_secure_alloc;
 
